builds and runs if shader bounds checks are enabled, modules are made public, and default texture view format is used!

--- a/wgpu-in-app/Cargo.toml
+++ b/wgpu-in-app/Cargo.toml
@@ -17,6 +17,10 @@ vulkan-portability = ["wgpu/vulkan-portability"]
 path = "../app-surface"
 package = "app-surface"
 
+[dependencies.game]
+path = "../../wgpu-game"
+package = "game"
+
 [dependencies]
 bytemuck.workspace = true
 glam.workspace = true
