--- a/Apple/wgpu_in_App.xcodeproj/xcshareddata/xcschemes/wgpu_phone.xcscheme
+++ b/Apple/wgpu_in_App.xcodeproj/xcshareddata/xcschemes/wgpu_phone.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1400"
+   LastUpgradeVersion = "1530"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -84,6 +84,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "AD4B1FE826EB1B90008A6AEE"
+            BuildableName = "wgpu_phone.app"
+            BlueprintName = "wgpu_phone"
+            ReferencedContainer = "container:wgpu_in_App.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
